Fix project details link text alignment

--- a/portfolio/styles/Projects.module.scss
+++ b/portfolio/styles/Projects.module.scss
@@ -1464,7 +1464,6 @@
 			line-height		: 1.8;
 			letter-spacing		: 0.03em;
 			text-rendering		: optimizeLegibility;
-			text-align		: left;
 
 			/* Link */
 			a {
@@ -1473,7 +1472,6 @@
 				font-family		: Lato;
 				font-size		: 1.25em;
 				letter-spacing		: 0.5px;
-				text-align		: left;
 			}
 		}
 
